# robotica-facil-con-ros2

./: .gitignore  gitignore
src/temas/esfera-movimiento-circular-gazebo/: README.md  package.xml  setup.cfg  setup.py
src/temas/esfera-movimiento-circular-gazebo/esfera_circular_gazebo/: nodo_velocidad_circular.py
src/temas/esfera-movimiento-circular-gazebo/launch/: esfera_circular.launch.py
src/temas/esfera-movimiento-circular-gazebo/worlds/: esfera_circular.sdf
src/temas/gz-cli-sim-control/: README.md  package.xml  setup.cfg  setup.py
src/temas/gz-cli-sim-control/gz_cli_sim_control/: gz_cli_demo.py
src/temas/gz-cli-sim-control/launch/: gz_cli_demo_launch.py
src/temas/gz-cli-sim-control/worlds/: cli_demo_world.sdf
src/temas/instalacion-gazebo-jetty/: README.md  package.xml  setup.cfg  setup.py
src/temas/instalacion-gazebo-jetty/launch/: empty_world.launch.py
src/temas/instalacion-gazebo-jetty/worlds/: empty_world.sdf
src/temas/random-objects-gazebo/: README.md  package.xml  setup.cfg  setup.py
src/temas/random-objects-gazebo/launch/: objects_scene.launch.py
src/temas/random-objects-gazebo/random_objects_gazebo/: spawn_objects_node.py
src/temas/random-objects-gazebo/worlds/: objects_scene.sdf
