<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>esfera_circular_gazebo</name>
  <version>0.1.0</version>
  <description>
    Esfera que realiza un movimiento circular con velocidad variable sobre un plano
    horizontal en Gazebo Jetty (ROS 2 Lyrical Luth).
  </description>
  <maintainer email="contacto@robotica-facil-con-ros2.es">José Enrique Cabrera</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
