<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_cli_sim_control</name>
  <version>0.1.0</version>
  <description>
    Demo of the Gazebo Jetty command-line tool (gz sim/service/topic) that
    drives a running simulation from a ROS 2 script: pause, resume, change the
    real-time factor, and query world statistics using the gz CLI itself.
  </description>
  <maintainer email="contacto@robotica-facil-con-ros2.es">José Enrique Cabrera</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>ros_gz_sim</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
