<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>instalacion_gazebo_jetty</name>
  <version>0.1.0</version>
  <description>
    Mundo Gazebo vacío y launch file de "primer contacto" para verificar una
    instalación de Gazebo Jetty sobre ROS 2 Lyrical Luth.
  </description>
  <maintainer email="contacto@robotica-facil-con-ros2.es">José Enrique Cabrera</maintainer>
  <license>Apache-2.0</license>

  <!-- ros_gz_sim aporta el launch reutilizable gz_sim.launch.py que arranca Gazebo -->
  <exec_depend>ros_gz_sim</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
